Change Role management in team UI

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,7 @@
         {% endblock %}
         {% block body %}{% endblock %}
 
+        <div id="homepage" hidden>{{ url('pm_schedule_homepage') }}</div>
         {% block javascripts %}
             <script src="{{ asset('app.js') }}"></script>
         {% endblock %}
