Correct Team member page for CI tests

--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/index.html.twig
@@ -1,6 +1,6 @@
 <h2>Team members</h2>
 
-<table class="records_list table table-striped members_team" name="members_team_{{ users|first.team|first.team.id }}">
+<table class="records_list table table-striped members_team" name="members_team_{{ team_id }}">
 	<thead>
 		<tr>
 			<th>User</th>
