[#1] Improvements on Team edition page

--- a/app/Resources/assets/stylesheets/theme/main.less
+++ b/app/Resources/assets/stylesheets/theme/main.less
@@ -1,6 +1,5 @@
 form {
   display: table;
-  width: 100%;
 }
 
 form div div {
@@ -24,4 +23,8 @@ body { padding-top: 70px; }
 .pm_edit_btn {
   float: left;
   margin-right: 10px;
+}
+
+.pm_full_width {
+  width: 100%;
 }
