--- a/src/ProjectManager/Bundle/ScheduleBundle/Resources/views/Schedule/index.html.twig
+++ b/src/ProjectManager/Bundle/ScheduleBundle/Resources/views/Schedule/index.html.twig
@@ -10,7 +10,8 @@ Week : {{ week }}
                     Users
                 </td>
                 {% for day in week_info.week_days %}
-                    <td class="week_calendar_header day_{{ day['day_number'] }}" id="column{{ day['date']|date("ymd") }}">
+                    <td class="week_calendar_header day_{{ day['day_number'] }} {{ day['day_number'] in non_working_days ? "non_" : "" }}working_day"
+                        id="column{{ day['date']|date("ymd") }}">
                         {{ ('days.'~day['day_number'])|trans }}
                         {{ day['date']|date("d/m/y") }}
                     </td>
@@ -30,7 +31,7 @@ Week : {{ week }}
                     </div>
                 </td>
                 {% for day in week_info.week_days %}
-                <td class="day_{{ day['day_number'] }}">
+                <td class="day_{{ day['day_number'] }} {{ day['day_number'] in non_working_days ? "non_" : "" }}working_day">
                 </td>
                 {% endfor %}
             </tr>
