Remove deprecation alerts

--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/edit.html.twig
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/edit.html.twig
@@ -6,5 +6,5 @@
 
 {% block body %}
     {{ parent() }}
-    {% render(controller('ProjectManagerProjectBundle:Task:index', { 'projectId': project.id })) %}
+    {{ render(controller('ProjectManagerProjectBundle:Task:index', { 'projectId': project.id })) }}
 {% endblock %}
